--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,10 @@
 .prose mark{
     color:#fff;
 }
+
+/* body {
+  background-image: url("/image.png");
+  background-size:contain;
+  background-position: center;
+  background-repeat: no-repeat;
+} */
