--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,33 @@
+
+
+
+@font-face {  
+  font-family: 'title-font';  
+  src: url('/fonts/HanaMinA.ttf');  
+  font-weight: normal;  
+  font-style: normal;  
+
+  unicode-range: U+4E00-9FFF;  /* 只包含 CJK 中文范围 */
+
+}
+@font-face {  
+  font-family: 'title-font-en';  
+  src: url('/fonts/Cormorant-VariableFont_wght.ttf');  
+  font-weight: normal;  
+  font-style: normal;  
+  unicode-range: U+0000-4DFF, U+A000-10FFFF;
+
+}
+
+
+h1:lang(zh), h2:lang(zh), h3:lang(zh), h4:lang(zh), h5:lang(zh), h6:lang(zh) {  
+  font-family: title-font-en, title-font, "PingFang SC", "Noto Serif SC", "Microsoft YaHei";  
+}
 .prose mark{
     color:#fff;
+}
+#the-top {
+  display: none !important;
 }
 strong{
   background-color: #06b5d473;
@@ -23,3 +51,37 @@ blockquote {
   background-position: center;
   background-repeat: repeat;
 } */
+ 
+/* 首页 样式 */
+body.kind-home,
+body.home {
+  background-image: url("../img/blueline.JPG");
+  background-size:cover;
+  background-position: center;
+  background-repeat: repeat;
+}
+body.kind-home::after {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(255, 255, 255, var(--home-fade-opacity, 0)); /* 初始透明 */
+  pointer-events: none;
+  transition: background 0.5s ease;
+  z-index: -1;
+}
+
+/* 首页 深色模式 */
+html.dark body.kind-home{
+  background-image: none; 
+  background-color: #0a192f; /* 可选：添加深蓝背景色 */
+}
+
+html.dark body.kind-home::after {
+  background: rgba(10, 25, 47, var(--home-fade-opacity, 0.8)); /* 深蓝色半透明淡出 */
+  transition: background 0.5s ease;
+}
+
+/* ****************END 首页*********************** */
