card-title font

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,7 +20,7 @@
 }
 
 
-h1:lang(zh), h2:lang(zh), h3:lang(zh), h4:lang(zh), h5:lang(zh), h6:lang(zh) {  
+h1:lang(zh), h2:lang(zh), h3:lang(zh), h4:lang(zh), h5:lang(zh), h6:lang(zh), .group-hover-card-title{  
   font-family: title-font-en, title-font, "PingFang SC", "Noto Serif SC", "Microsoft YaHei";  
 }
 .prose mark{
